{
    "version": 1,
    "name": "ClickIt!_InputActions",
    "maps": [
        {
            "name": "Main",
            "id": "f8d3251f-afd6-4c4a-b7f5-68d2f134a140",
            "actions": [
                {
                    "name": "LeftMouseButton",
                    "type": "Button",
                    "id": "47c53e27-46e3-462f-ad02-59c1d5a0715d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMouseButton",
                    "type": "Button",
                    "id": "3876d470-4f18-4d4d-8198-09d50db69732",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MiddleMouseButton",
                    "type": "Button",
                    "id": "262bc9b8-1144-4122-a54d-b38b7253f3c8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseMove",
                    "type": "PassThrough",
                    "id": "d17b3f7d-a6bd-4656-9f8a-f4d63902ffde",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b6243ab1-4a49-410b-8b00-eab856c37f32",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae30d545-6a8e-4bd2-9bde-c4c2a7822519",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0c79e5c-07a4-4325-aaee-b636bf0562d8",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MiddleMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "e984461e-4bf9-47a8-a440-4a00b7f36d39",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MiddleMouseButton",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "98ba3f57-6ee6-4c1e-8b6d-1f445b17c99b",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MiddleMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "29e2ef98-c5d7-4230-a5fc-ca3082152716",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MiddleMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b51d0913-2914-44fd-a107-9dcccd5ef2d9",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}